deploy-k8s-files/methods.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-methods
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
      - "TRACE"
      - "PATCH"
      - "CONNECT"
      - "POST"
      - "DELETE"
      - "HEAD"
    sslRedirect: true
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "https://portal.k8s.vlens.org"
      - "https://*.k8s.vlens.org"
    accessControlMaxAge: 100
    addVaryHeader: true
