deploy-k8s-files/redirect.yaml
  GNU nano 4.8                                                          redirect.yaml                                                                     
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
