deploy-k8s-files/vlens-kyc-mig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vlens-kyc-migrator
  labels:
    app: vlens-kyc-mig-db
spec:
  selector:
    matchLabels:
      app: vlens-kyc-mig-db
      tier: mssql
  template:
    metadata:
      labels:
        app: vlens-kyc-mig-db
        tier: mssql
    spec:
      containers:
      - name: vlens-kyc-migrator
        image: vlensclient.azurecr.io/vlens.kyc.migrator:1.3.0
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
      - name: registery-azurecr-secret
