deploy-k8s-files/FaceMatching.yaml
apiVersion: v1
kind: Service
metadata:
  name: vlens-kyc-web-fm
  labels:
    app: vlens-kyc-web-fm
spec:
  type: ClusterIP
  selector:
    app: vlens-kyc-web-fm
    tier: frontend
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vlens-kyc-web-fm
  labels:
    app: vlens-kyc-web-fm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vlens-kyc-web-fm
      tier: frontend
  template:
    metadata:
      labels:
        app: vlens-kyc-web-fm
        tier: frontend        
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - vlens-kyc-web-fm
            topologyKey: kubernetes.io/hostname     
      hostNetwork: true
      containers:
       - name: vlens-kyc-web-fm
         image: vlensregistry.azurecr.io/ovr:face_match_27_12_23
         imagePullPolicy: IfNotPresent
         ports:
          - containerPort: 5000
         volumeMounts:
            - name: vlens-kyc-web-fm-persistent-storage
              mountPath: /fm_app/data_volume         
      imagePullSecrets:
      - name: regcred
      volumes:
        - name: vlens-kyc-web-fm-persistent-storage
          persistentVolumeClaim:
            claimName: vlens-kyc-web-fm-pv-claim
