deploy-k8s-files/computervision.yaml
apiVersion: v1
kind: Service
metadata:
  name: vlens-kyc-web-cv
  labels:
    app: vlens-kyc-web-cv
spec:
  type: ClusterIP
  selector:
    app: vlens-kyc-web-cv
    tier: frontend
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vlens-kyc-web-cv
  labels:
    app: vlens-kyc-web-cv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vlens-kyc-web-cv
      tier: frontend
  template:
    metadata:
      labels:
        app: vlens-kyc-web-cv
        tier: frontend        
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - vlens-kyc-web-cv
            topologyKey: kubernetes.io/hostname     
      hostNetwork: true
      containers:
       - name: vlens-kyc-web-cv
         image: vlensregistry.azurecr.io/ovr:v1_cv_13_12_23_CI
         imagePullPolicy: IfNotPresent
         ports:
          - containerPort: 5000
         volumeMounts:
            - name: vlens-kyc-web-cv-persistent-storage
              mountPath: /cv_app/data_volume         
      imagePullSecrets:
      - name: regcred
      volumes:
        - name: vlens-kyc-web-cv-persistent-storage
          persistentVolumeClaim:
            claimName: vlens-kyc-web-cv-pv-claim
