deploy-k8s-files/vlens-kyc-db.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: vlens-kyc-db
    labels:
      app: vlens-kyc-db
  spec:
    type: NodePort
    selector:
      app: vlens-kyc-db
      tier: mssql
    ports:
    - name: mssql
      protocol: TCP
      port: 1433
      targetPort: 1433
---
  apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: vlens-kyc-db-pv-claim
    labels:
      app: vlens-kyc-db
  spec:
    storageClassName: manual
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 5G
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: vlens-kyc-db
    labels:
      app: vlens-kyc-db
  spec:
    selector:
      matchLabels:
        app: vlens-kyc-db
        tier: mssql
    template:
      metadata:
        labels:
          app: vlens-kyc-db
          tier: mssql
      spec:
        containers:
        - name: vlens-kyc-db
          image: vlensclient.azurecr.io/vlens:sql2019
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          ports:
          - name: vlens-kyc-db
            containerPort: 1433
          volumeMounts:
          - name: vlens-kyc-db-persistent-storage
            mountPath: /var/opt/mssql/data
        imagePullSecrets:
        - name: registery-azurecr-secret
        volumes:
        - name: vlens-kyc-db-persistent-storage
          persistentVolumeClaim:
            claimName: vlens-kyc-db-pv-claim
