deploy-k8s-files/vlens-kyc-web-host.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: vlens-kyc-web-host
    labels:
      app: vlens-kyc-web-host
  spec:
    type: NodePort
    selector:
      app: vlens-kyc-web-host
    ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 80
---
  apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: vlens-kyc-web-host-pv-claim
    labels:
      app: vlens-kyc-web-host
  spec:
    storageClassName: manual
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 5G
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: vlens-kyc-web-host
    labels:
      app: vlens-kyc-web-host
  spec:
    selector:
      matchLabels:
        app: vlens-kyc-web-host
        tier: backend
    template:
      metadata:
        labels:
          app: vlens-kyc-web-host
          tier: backend         
      spec:
        containers:
          - name: vlens-kyc-web-host
            image: vlensclient.azurecr.io/vlens.kyc.web.host:1.4.0
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 80
            volumeMounts:
              - name: vlens-kyc-web-host-persistent-storage
                mountPath: /app/App_Data
        imagePullSecrets:
          - name: registery-azurecr-secret
        volumes:
          - name: vlens-kyc-web-host-persistent-storage
            persistentVolumeClaim:
              claimName: vlens-kyc-web-host-pv-claim
