deploy-k8s-files/vlens-kyc-web-portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: vlens-kyc-web-portal
  labels:
    app: vlens-kyc-web-portal
spec:
  type: NodePort
  selector:
    app: vlens-kyc-web-portal
    tier: frontend
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: vlens-kyc-web-portal
    labels:
      app: vlens-kyc-web-portal
  spec:
    selector:
      matchLabels:
        app: vlens-kyc-web-portal
        tier: frontend
    template:
      metadata:
        labels:
          app: vlens-kyc-web-portal
          tier: frontend
      spec:
        containers:
        - name: vlens-kyc-web-portal
          image: vlensclient.azurecr.io/vlens.kyc.web.angular:1.4.1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
        imagePullSecrets:
        - name: registery-azurecr-secret
